[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/images/dark-spirit.png" type="Texture" id=1]
[ext_resource path="res://objects/Enemy.gd" type="Script" id=2]
[ext_resource path="res://assets/images/light.png" type="Texture" id=3]
[ext_resource path="res://objects/EnemyStateMachine.gd" type="Script" id=4]
[ext_resource path="res://objects/Wander.gd" type="Script" id=5]
[ext_resource path="res://objects/Chase.gd" type="Script" id=6]
[ext_resource path="res://objects/Flee.gd" type="Script" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 35.0

[sub_resource type="CircleShape2D" id=2]
radius = 125.0

[sub_resource type="CircleShape2D" id=3]
radius = 175.0

[sub_resource type="CircleShape2D" id=4]
radius = 210.0

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 2
script = ExtResource( 2 )

[node name="Darkness" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.843137 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="LighAbsorb" type="Area2D" parent="."]
visible = false
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="LighAbsorb"]
shape = SubResource( 2 )

[node name="AbsorbTimer" type="Timer" parent="."]
process_mode = 0

[node name="EnemyStateMachine" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="Wander" type="Node2D" parent="EnemyStateMachine"]
script = ExtResource( 5 )

[node name="RayCasts" type="Node2D" parent="EnemyStateMachine/Wander"]

[node name="RightRay" type="RayCast2D" parent="EnemyStateMachine/Wander/RayCasts"]
enabled = true
cast_to = Vector2( 50, 0 )
collision_mask = 2

[node name="DownRay" type="RayCast2D" parent="EnemyStateMachine/Wander/RayCasts"]
enabled = true
cast_to = Vector2( 0, 50 )
collision_mask = 2

[node name="LeftRay" type="RayCast2D" parent="EnemyStateMachine/Wander/RayCasts"]
enabled = true
cast_to = Vector2( -50, 0 )
collision_mask = 2

[node name="UpRay" type="RayCast2D" parent="EnemyStateMachine/Wander/RayCasts"]
enabled = true
cast_to = Vector2( 0, -50 )
collision_mask = 2

[node name="MoveTimer" type="Timer" parent="EnemyStateMachine/Wander"]
wait_time = 2.0
one_shot = true

[node name="ChaseDetect" type="Area2D" parent="EnemyStateMachine/Wander"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyStateMachine/Wander/ChaseDetect"]
shape = SubResource( 3 )
disabled = true

[node name="Chase" type="Node2D" parent="EnemyStateMachine"]
script = ExtResource( 6 )

[node name="StopChaseDetect" type="Area2D" parent="EnemyStateMachine/Chase"]
visible = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyStateMachine/Chase/StopChaseDetect"]
shape = SubResource( 4 )
disabled = true

[node name="Flee" type="Node2D" parent="EnemyStateMachine"]
script = ExtResource( 7 )
[connection signal="body_entered" from="LighAbsorb" to="." method="_on_LighAbsorb_body_entered"]
[connection signal="body_exited" from="LighAbsorb" to="." method="_on_LighAbsorb_body_exited"]
[connection signal="timeout" from="AbsorbTimer" to="." method="_on_AbsorbTimer_timeout"]
[connection signal="timeout" from="EnemyStateMachine/Wander/MoveTimer" to="EnemyStateMachine/Wander" method="_on_MoveTimer_timeout"]
[connection signal="body_entered" from="EnemyStateMachine/Wander/ChaseDetect" to="EnemyStateMachine/Wander" method="_on_ChaseDetect_body_entered"]
[connection signal="body_exited" from="EnemyStateMachine/Chase/StopChaseDetect" to="EnemyStateMachine/Chase" method="_on_StopChaseDetect_body_exited"]
